<resources>
    <string name="app_name">E-News</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email usuario</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrarse</string>
    <string name="datos_usuario_registro">Datos de registro</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="alias_usuario">Alias</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="recordar_pass"><u>Recordar Contraseña</u></string>
    <string name="mensaje_recordar_pass">Se va a enviará un mensaje con la nueva clave a el correo electrónico que se utilice.</string>
    <string name="recordarpasstitulo">¿Está seguro?</string>
    <string name="error_conexion">Error de conexión</string>
    <string name="logeo_correcto">Inicio de sesión correcto.</string>
    <string name="usuario_creado">El usuario se ha creado correctamente</string>
    <string name="pass_dont_match">Las contraseñas no coinciden</string>
    <string name="debe_rellenar_campos">Debe rellenar todos los campos</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensaje_enviado">Se le ha enviado el mensaje a su correo.</string>
    <string name="debe_indicar_nombre_usuario_registrado">Debe indicar el nombre de usuario con el que desea recuperar la contraseña.</string>
    <string name="email_correcto">Debe introducir un email con formato correcto.</string>
    <string name="editar_perfil">Perfil usuario</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="error_cerrar_sesion">Se ha producido un error cerrando la sesión.</string>
    <string name="correcto_cerrar_sesion">Se ha cerrado correctamente la sesión</string>
    <string name="preferencias_drawer">Preferencias</string>
    <string name="nombre_usuario_navigation">Nombre de usuario:</string>
    <string name="email_usuario_drawer">Email de usuario:</string>
    <string name="pass_min_cuatro">La nueva contraseña debe tener 4 caracteres como mínimo.</string>
    <string name="need_cambio_datos">Necesita cambiar algun campo para poder modificar sus datos.</string>
    <string name="cambio_datos_ok">Se han cambiado los datos correctamente.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noticias">Noticias</string>
    <string name="comentarios">Comentarios</string>
    <string name="categorias_noticias">Categorías</string>
    <string name="cambiardatos">Cambiar datos del usuario</string>
    <string name="cambiarcontrasena">Cambiar Contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="confirmar_contrasena_con_puntos">Confirmar contraseña:</string>
    <string name="nueva_contrasena_con_puntos">Nueva contraseña:</string>
    <string name="contrasena_actual_con_puntos">Contraseña actual:</string>
    <string name="solicitar_cambio">Solicitar cambio</string>
    <string name="aceptar_cambio">Aceptar cambio</string>
    <string name="cambio_contrasena_correcto">Cambio de contraseña realizado correctamente.</string>
    <string name="datos_usuario">Datos del usuario</string>
    <string name="cambios_para_editar">Introduce cambios para poder editar</string>
    <string name="veranadircomentarios"><u>Ver comentarios o añadir uno.</u></string>
    <string name="anadircomentario">Añadir Comentario</string>
    <string name="enviarcomentario">Enviar Comentario</string>
    <string name="escribacomentario">Escriba su comentario aquí</string>
    <string name="comentariovacio">El comentario esta vacio escribe algo para enviarlo.</string>
    <string name="comentarioregistrado">El comentario se ha registrado correctamente.</string>
    <string name="comentarionoregistrado">El comentario no se ha podido registrar, intentelo de nuevo mas tarde.</string>
</resources>
